src/test/testFiles/invalid/semanticErrors/arrayMissingConstructorArguments.manimdsl
let x = new Array<number>();